# nasvar

./: Architecture.md  Cargo.toml  LICENSE  README.md  Walkthrough.md
config/: T2T-CHM13v2.0_reference.json  peds_leukemia_config.json
src/: bam.rs  config.rs  input.rs  lib.rs
src/karyotype/: mod.rs  plot.rs
src/output/: collector.rs  mod.rs  schema.rs  types.rs
src/pipeline/: mod.rs
src/plotting/: axes.rs  data.rs  error.rs  figure.rs  mod.rs
src/plotting/backend/: mod.rs  svg.rs
src/plotting/element/: axis.rs  grid.rs  legend.rs  mod.rs  text.rs
src/plotting/plot/: line.rs  mod.rs  scatter.rs
src/plotting/scale/: linear.rs  mod.rs
src/plotting/style/: color.rs  fill_style.rs  line_style.rs  marker.rs  mod.rs  text_style.rs  theme.rs
src/report/: mod.rs
src/utils/: align.rs  annotation.rs  bed.rs  contig.rs  metadata.rs  mod.rs  qc.rs  time.rs
src/var/: cnv.rs  coverage.rs  fusion_consensus.rs  fusions.rs  itd.rs  maf.rs  mod.rs  snv.rs
